--- a/Stylesheets/index.css
+++ b/Stylesheets/index.css
@@ -2,17 +2,18 @@
 @import url('https://api.fontshare.com/v2/css?f[]=stardom@400&display=swap');
 @import url('https://api.fontshare.com/v2/css?f[]=satoshi@700&display=swap');
 @import url('https://api.fontshare.com/v2/css?f[]=telma@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 :root {
     --clr-dark: #16110b;
-    --clr-light: #f4f0eb;
+    --clr-light: #fbf4e7;
 }
 
 body{
     margin: 0px;
     margin-left: 1.875rem;
     margin-right: 1.875rem;
-    background-color: var(--clr-dark);
+    background-color: var(--clr-light);
     display: flow-root;
     scroll-snap-type: y mandatory;
 }
@@ -43,7 +44,7 @@ body{
 }
 
 .nav_links li a {
-    color: #f0ece7;
+    color: #20252e;
     font-size: 1.25rem;
     font-family: 'Satoshi', sans-serif;
     font-weight: 662;
@@ -61,7 +62,7 @@ body{
 #websiteTitle{
     font-size: clamp(0.625rem, 0.9375rem, 1.25rem);
     font-family: 'Stardom', sans-serif;
-    color: #f0ece7;
+    color: #20252e;
 }
 
 .media_links {
@@ -380,6 +381,9 @@ body{
 
 .introductionText p {
     font-size: 1.25rem;
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 500;
+    font-style: normal;
 }
 
 #aboutUsBlock {
@@ -427,19 +431,26 @@ body{
 }
 
 .storySectionText h2 {
-    color: #f0ece7;
-    font-family: 'Albert Sans', sans-serif;
+    color: #20252e;
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 500;
+    font-style: normal;
     font-size: 2.1875rem;
 }
 
 .storySectionText p {
-    color: #f0ece7;
-    font-family: 'Albert Sans', sans-serif;
+    color: #20252e;
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 500;
+    font-style: normal;
     font-size: 1.25rem;
 }
 
 #environmentText {
     font-size: 1.25rem;
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 500;
+    font-style: normal;
     margin-top: 3.125rem;
 }
 
@@ -499,7 +510,7 @@ body{
     padding-right: 3.125rem;
     padding-top: 0.625rem;
 
-    color: #f0ece7;
+    color: #20252e;
     font-family: 'Albert Sans', sans-serif;
     font-size: clamp(0.75rem, 1vw, 0.9375rem);
     line-height: 2.1;
@@ -514,12 +525,12 @@ body{
 
 .titles{
     font-family: 'Allura', cursive;
-    color: antiquewhite;
+    color: #20252e;
     font-size: 2.1875rem;
 }
 
 .mainText{
-    color: #f0ece7;
+    color: #20252e;
 
     font-size: 1.25rem;
     font-family: 'Albert Sans', sans-serif;
@@ -607,7 +618,7 @@ body{
 
     font-size: 0.625rem;
     font-family: 'Albert Sans', sans-serif;
-    color: #ffffff; 
+    color: #20252e; 
 }
 
 .footerText{
@@ -615,7 +626,7 @@ body{
 
     font-size: 0.9375rem;
     font-family: 'Albert Sans', sans-serif;
-    color: #ffffff;
+    color: #20252e;
     
 }
 
@@ -654,7 +665,7 @@ footer{
     border-radius: 0.5rem;
 
     text-align: center;
-    color: #fff;
+    color: #20252e;
 }
 
 #productImage {
@@ -681,10 +692,16 @@ footer{
 
 #product section h3 {
     font-size: clamp(2.5rem, 3.5vw, 5rem);
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 500;
+    font-style: normal;
 }
 
 #product section p {
     font-size: clamp(0.625rem, 0.9375rem, 1vw);
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 500;
+    font-style: normal;
 }
 
 /* Adaptive Styling */
