--- a/Stylesheets/index.css
+++ b/Stylesheets/index.css
@@ -11,8 +11,6 @@
 
 body{
     margin: 0px;
-    margin-left: 1.875rem;
-    margin-right: 1.875rem;
     background-color: var(--clr-light);
     display: flow-root;
     scroll-snap-type: y mandatory;
@@ -46,18 +44,20 @@ body{
 .nav_links li a {
     color: #20252e;
     font-size: 1.25rem;
-    font-family: 'Satoshi', sans-serif;
-    font-weight: 662;
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 500;
+    font-style: normal;
     text-decoration: none;
     text-shadow: none;
 
     transition: all 0.3s ease-in-out;
 }
 
+/*
 .nav_links li a:hover {
     text-shadow: 0 0 1em currentColor;
 }
-
+*/
 
 #websiteTitle{
     font-size: clamp(0.625rem, 0.9375rem, 1.25rem);
@@ -78,131 +78,45 @@ body{
 }
 
 #instagram1{
+    margin-right: 1rem;
+    width: 25px;
+    height: auto;
+}
+
+#facebook1{
+    margin-right: 1rem;
+    width: 25px;
+    height: auto;
+}
+
+#twitter1{
+    margin-right: 1rem;
     width: 25px;
     height: auto;
 }
 
 #menuBar{
+    margin-right: 1rem;
     width: 25px;
     height: auto;
 }
 
 /* Main styles */
 .bannerContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-
     margin: 0;
-    margin-bottom: 6.25rem;
     width: 100%;
-    height: clamp(20rem, 30rem, 35rem);
-    
-    background-color: var(--clr-dark);
+    height: 100%;
 
-    color: #f0ece7;
+    margin-bottom: 6.25rem;
+}
 
+.bannerContainer img {
     border-radius: 0.5rem;
-}
-
-.bannerContainer h2{
-    pointer-events: none;
-    margin: 0;
-    
-    font-family: 'Satoshi', sans-serif;
-    font-weight: 734;
-
-    font-size: clamp(0.9375rem, 1vw + 1rem, 1.875rem);
-}
-
-.bigText {
-    display: flex;
-    flex-direction: column;
-    
-    align-items: center;
-    justify-content: center;
-
-    width: auto;
-    height: auto;
-}
-
-.bigText h1{
-    height: auto;
-
-    pointer-events: none;
-    margin: 0;
-
-    font-family: 'Telma', cursive;
-    font-weight: 563;
-    font-size: clamp(3.75rem, 17vw + 1rem, 15.625rem);
-    opacity: 0;
-
-    animation-name: title-fade-in;
-    animation-duration: 0.5s;
-    animation-timing-function: ease-in;
-    animation-delay: 0.5s;
-    animation-iteration-count: 1;
-    animation-direction: normal;
-    animation-fill-mode: forwards;
-
-}
-
-.bigText h2{
-    pointer-events: none;
-    margin: 0;
-    
-    font-family: 'Satoshi', sans-serif;
-    font-weight: 734;
-
-    font-size: clamp(0.9375rem, 1vw + 1rem, 1.875rem);
-}
-
-#webTag{
-    opacity: 0;
-
-    animation-name: title-fade-in;
-    animation-duration: 0.5s;
-    animation-timing-function: ease-in;
-    animation-delay: 0.5s;
-    animation-iteration-count: 1;
-    animation-direction: normal;
-    animation-fill-mode: forwards;
-}
-
-#welcomeTag{
-    opacity: 0;
-
-    animation-name: welcomeFade;
-    animation-duration: 0.5s;
-    animation-timing-function: ease-in;
-    animation-delay: 0s;
-    animation-iteration-count: 1;
-    animation-direction: normal;
-    animation-fill-mode: forwards;
-}
-
-@keyframes title-fade-in {
-    from {
-        opacity: 0;
-        scale: 0.9;
-    }
-
-    to {
-        opacity: 1;
-        scale: 1;
-    }
-}
-
-@keyframes welcomeFade {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 16/9;
+    object-fit: cover;
+    object-position: center;
 }
 
 .purchaseButton {
@@ -613,6 +527,20 @@ body{
     height: auto;
 }
 
+#facebook{
+    margin: 0.3125rem;
+
+    width: 20px;
+    height: auto;
+}
+
+#twitter{
+    margin: 0.3125rem;
+
+    width: 20px;
+    height: auto;
+}
+
 #footerCopyright{
     margin: 0;
 
@@ -765,19 +693,31 @@ footer{
         display: none;
     }
 
-    #menuBar{
-        display: flow-root;
+    #facebook1{
+        display: none;
     }
 
-    #websiteContact{
+    #twitter1{
         display: none;
+    }
+
+    #menuBar{
+        display: flow-root;
     }
 
     #websiteHome{
         display: none;
     }
 
-    #websiteUs{
+    #websiteAbout{
+        display: none;
+    }
+
+    #websiteOrder{
+        display: none;
+    }
+
+    #websiteContact {
         display: none;
     }
 
