--- a/Stylesheets/index.css
+++ b/Stylesheets/index.css
@@ -28,7 +28,7 @@ body{
 
     margin: 0;
     width: 100%;
-    height: 60px;
+    height: 150px;
 
 }
 
@@ -58,6 +58,12 @@ body{
     text-shadow: 0 0 1em currentColor;
 }
 */
+
+#websiteImageLogo {
+    margin-left: 1rem;
+    width: 12.5rem;
+    height: auto;
+}
 
 #websiteTitle{
     font-size: clamp(0.625rem, 0.9375rem, 1.25rem);
@@ -630,6 +636,29 @@ footer{
     font-family: "Cormorant Garamond", serif;
     font-weight: 500;
     font-style: normal;
+}
+
+/* Contact Styling */
+.contactBlock{
+    height: 100%;
+    width: 100%;
+
+    display: flex;
+    gap: 2rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    border: 0.5rem;
+    text-decoration: none;
+}
+
+.contactBlock h1{
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 500;
+    font-style: normal;
+    text-decoration: none;
 }
 
 /* Adaptive Styling */
