--- a/Stylesheets/index.css
+++ b/Stylesheets/index.css
@@ -384,9 +384,10 @@ body{
     height: 100%;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: cente;
+    text-align: center;
 
     background: none;
 }
