--- a/Stylesheets/index.css
+++ b/Stylesheets/index.css
@@ -646,9 +646,51 @@ footer{
 
 .contactBlock h1{
     font-family: "Cormorant Garamond", serif;
+    font-size: 50px;
     font-weight: 500;
     font-style: normal;
     text-decoration: none;
+}
+
+.contact-inputs {
+    width: 75%;
+    height: 70px;
+    border: none;
+    outline: none;
+
+    padding-left: 25px;
+    font-weight: 500;
+    border-radius: 0.5rem;
+}
+
+.contactBlock hr {
+    border: none;
+    width: 200px;
+    height: 5px;
+    background-color: #20252e;
+    border-radius: 0.5rem;
+}
+
+.contactBlock textarea {
+    margin: 0px 20px;
+    height: 200px;
+    border-radius: 1rem;
+}
+
+.contactBlock button {
+    margin-bottom: 50px;
+    font-size: 1rem;
+    border: none;
+    outline: none;
+    text-decoration: none;
+
+    height: 50px;
+    background-color: #fff;
+    border-radius: 0.5rem;
+}
+
+.contact-inputs:focus {
+    border: 2px solid #20252e;
 }
 
 /* Adaptive Styling */
@@ -752,5 +794,18 @@ footer{
 @media (min-width: 805px) {
     #menuBar{
         display: none;
+    }
+}
+
+@media (max-width: 410px) {
+    .contact-inputs {
+        width: 300px;
+        height: 50px;
+        border: none;
+        outline: none;
+    
+        padding-left: 25px;
+        font-weight: 500;
+        border-radius: 0.5rem;
     }
 }
