--- a/Stylesheets/index.css
+++ b/Stylesheets/index.css
@@ -316,7 +316,6 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
 
     padding: 0 50px;
 
@@ -586,7 +585,7 @@ footer{
     border: none;
     width: 70%;
     height: 5px;
-    background-color: #22262c;
+    background-color: #fcf0da;
     border-radius: 0.5rem;
 }
 
@@ -614,6 +613,7 @@ footer{
 }
 
 .productCardImage img {
+    height: 100%;
     max-height: 500px;
 
     border-radius: 0.5rem;
