--- a/Stylesheets/index.css
+++ b/Stylesheets/index.css
@@ -317,8 +317,6 @@ body{
     align-items: center;
     justify-content: center;
 
-    padding: 0 50px;
-
     width: 100%;
     height: 100%;
 }
@@ -450,6 +448,56 @@ body{
     line-height: 2.0;
 }
 
+/* Image Scroller */
+.tag-list {
+    margin: 0;
+    padding-inline: 0;
+    list-style: none;
+}
+
+.tag-list img {
+    height: 600px;
+    width: 600px;
+    object-fit: cover;
+    border-radius: 0.5rem;
+}
+
+.scroller {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.inner_scroller {
+    padding-block: 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.scroller[data-animated=true] {
+    overflow: hidden;
+}
+
+.scroller[data-animated=true] .inner_scroller {
+    width: max-content;
+    flex-wrap: nowrap;
+    animation: scroll 20s linear infinite;
+    
+}
+
+.scroller[data-animated=false] .inner_scroller {
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+}
+
+@keyframes scroll {
+    to {
+        transform: translate(calc(-50% - 0.5rem));
+    }
+}
+
 /* Image Slider */
 
 .slideContainer {
@@ -562,6 +610,9 @@ footer{
     justify-content: center;
     text-align: center;
 }
+
+/* Candle Swiper Styles */
+/**/
 
 /* Product Page Styles */
 .productCardContainer {
@@ -725,6 +776,14 @@ footer{
 
     .storySection {
         flex-direction: row;
+        gap: 2rem;
+    }
+
+    .storySectionText {
+        width: 50%;
+    }
+    .storySection img {
+        width: 50%;
     }
 
     .productContainer {
@@ -836,6 +895,13 @@ footer{
     }
 }
 
+@media (min-width: 610px) {
+    .scroller[data-animated=false] .tag-list img {
+        width: 25%;
+        height: auto;
+    }
+}
+
 @media (max-width: 410px) {
     .contact-inputs {
         width: 300px;
@@ -846,5 +912,10 @@ footer{
         padding-left: 25px;
         font-weight: 500;
         border-radius: 0.5rem;
+    }
+
+    .scroller[data-animated=false] .tag-list img {
+        height: 400px;
+        width: 400px;
     }
 }
