--- a/Stylesheets/index.css
+++ b/Stylesheets/index.css
@@ -720,6 +720,46 @@ footer{
     border: 2px solid #20252e;
 }
 
+/*Error 404*/
+.error_page {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 1.5rem;
+    padding: 1rem;
+}
+
+.error_page img {
+    width: 500px;
+    height: auto;
+}
+
+.error_page h2 {
+    font-size: 35px;
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.error_page p {
+    font-size: 20px;
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.error_page a {
+    font-size: 20px;
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 500;
+    font-style: normal;
+    text-decoration: none;
+}
+
 /* Adaptive Styling */
 
 @media (min-width: 1060px) {
